force-app/main/default/objects/Case/fields/FS_FirstNotification__c.field-meta.xml
<CustomField>
    <fullName>FS_FirstNotification__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Primeira Notificação?</label>
    <type>Checkbox</type>
</CustomField>