force-app/main/default/objects/Case/fields/FS_HouseOccupant__c.field-meta.xml
<CustomField>
    <fullName>FS_HouseOccupant__c</fullName>
    <label>Quem Mora no Imóvel?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HouseOccupant</valueSetName>
    </valueSet>
</CustomField>