force-app/main/default/objects/Case/fields/FS_IDCartorio__c.field-meta.xml
<CustomField>
    <fullName>FS_IDCartorio__c</fullName>
    <label>ID Cartório</label>
    <length>255</length>
    <type>Text</type>
</CustomField>