force-app/main/default/objects/Case/fields/FS_NomeComprador__c.field-meta.xml
<CustomField>
    <fullName>FS_NomeComprador__c</fullName>
    <formula>PurchaseSaleContract__r.Buyer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Comprador</label>
    <type>Text</type>
</CustomField>