force-app/main/default/objects/Case/fields/FS_PDSL_SubscriptionSchedulingDate__c.field-meta.xml
<CustomField>
    <fullName>FS_PDSL_SubscriptionSchedulingDate__c</fullName>
    <label>Data de Agendamento da Assinatura</label>
    <type>Date</type>
</CustomField>