force-app/main/default/objects/Case/fields/FS_PreemptiveRight__c.field-meta.xml
<CustomField>
    <fullName>FS_PreemptiveRight__c</fullName>
    <label>Status DP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PreemptiveRight</valueSetName>
    </valueSet>
</CustomField>