force-app/main/default/objects/Case/fields/FS_ProofPaymentReceived__c.field-meta.xml
<CustomField>
    <fullName>FS_ProofPaymentReceived__c</fullName>
    <label>Comprovante de Pagamento Recebido?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
                <label>Sim</label>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>Não</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>