force-app/main/default/objects/Case/fields/FS_ReasonNonConversion__c.field-meta.xml
<CustomField>
    <fullName>FS_ReasonNonConversion__c</fullName>
    <label>Motivos da não-conversão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comprador não retornou aos contatos</fullName>
            </value>
            <value>
                <fullName>Comprador não quis seguir com os valores do CCV</fullName>
            </value>
            <value>
                <fullName>Distância do cartório</fullName>
            </value>
            <value>
                <fullName>Distrato</fullName>
            </value>
            <value>
                <fullName>Indicação de EN a outro CRN</fullName>
            </value>
            <value>
                <fullName>Preferência por cartório de confiança</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>