force-app/main/default/objects/Case/fields/FS_ReasonsLTOverrun__c.field-meta.xml
<CustomField>
    <fullName>FS_ReasonsLTOverrun__c</fullName>
    <label>Motivos do estouro do LT</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente entrega de documentos por BY</fullName>
            </value>
            <value>
                <fullName>Pendente entrega de documentos por SL</fullName>
            </value>
            <value>
                <fullName>Pendente aprovação da minuta por BY</fullName>
            </value>
            <value>
                <fullName>Pendente aprovação da minuta por SL</fullName>
            </value>
            <value>
                <fullName>Aguardando agendamento por BY</fullName>
            </value>
            <value>
                <fullName>Aguardando agendamento por SL</fullName>
            </value>
            <value>
                <fullName>Compra e Venda Casada</fullName>
            </value>
            <value>
                <fullName>Solicitação de aditivo</fullName>
            </value>
            <value>
                <fullName>Alteração da data de assinatura</fullName>
            </value>
            <value>
                <fullName>Assinatura a longo prazo</fullName>
            </value>
            <value>
                <fullName>Registro ou averbação precedentes</fullName>
            </value>
            <value>
                <fullName>Migrado de outro fluxo</fullName>
            </value>
            <value>
                <fullName>Aguardando liberação dos recursos financeiros BY</fullName>
            </value>
            <value>
                <fullName>Aguardando pagamento de ITBI</fullName>
            </value>
            <value>
                <fullName>Aguardando Certidões</fullName>
            </value>
            <value>
                <fullName>Aguardando liberação</fullName>
                <isActive>false</isActive>
                <label>Aguardando liberação</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>