force-app/main/default/objects/Case/fields/FS_ReasonsLTOverrunRegister__c.field-meta.xml
<CustomField>
    <fullName>FS_ReasonsLTOverrunRegister__c</fullName>
    <label>Motivos do estouro de LT de Registro</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N.E Adequação de documento para PDF/A</fullName>
            </value>
            <value>
                <fullName>N.E Rerratificação da escritura</fullName>
            </value>
            <value>
                <fullName>N.E Termo de Quitação</fullName>
            </value>
            <value>
                <fullName>N.E Procuração de TQ</fullName>
            </value>
            <value>
                <fullName>N.E Atualização de Casamento BY</fullName>
            </value>
            <value>
                <fullName>N.E Atualização de Casamento SL</fullName>
            </value>
            <value>
                <fullName>N.E Atualização de União Estável BY</fullName>
            </value>
            <value>
                <fullName>N.E Atualização de União Estável SL</fullName>
            </value>
            <value>
                <fullName>N.E Registro de pacto antenupcial BY</fullName>
            </value>
            <value>
                <fullName>N.E Registro de pacto antenupcial SL</fullName>
            </value>
            <value>
                <fullName>N.E Documentos pessoais SL</fullName>
            </value>
            <value>
                <fullName>N.E Documentos pessoais BY</fullName>
            </value>
            <value>
                <fullName>N.E Atualização de dados do imóvel</fullName>
            </value>
            <value>
                <fullName>N.E HIS/HMP</fullName>
            </value>
            <value>
                <fullName>N.E ITBI</fullName>
            </value>
            <value>
                <fullName>Demora no pagamento das custas por BY</fullName>
            </value>
            <value>
                <fullName>Demora no pagamento das custas por SL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>