force-app/main/default/objects/Case/fields/FS_ResponsibleAssistant__c.field-meta.xml
<CustomField>
    <fullName>FS_ResponsibleAssistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auxiliar responsável</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos1</relationshipName>
    <type>Lookup</type>
</CustomField>