force-app/main/default/objects/Case/fields/FS_ReturnDate__c.field-meta.xml
<CustomField>
    <fullName>FS_ReturnDate__c</fullName>
    <label>Data de retorno</label>
    <type>Date</type>
</CustomField>