force-app/main/default/objects/Case/fields/FS_SLNextContactDate__c.field-meta.xml
<CustomField>
    <fullName>FS_SLNextContactDate__c</fullName>
    <label>Próxima Data do Contato - Seller</label>
    <type>Date</type>
</CustomField>