force-app/main/default/objects/Case/fields/FS_SubscriptionModelSeller__c.field-meta.xml
<CustomField>
    <fullName>FS_SubscriptionModelSeller__c</fullName>
    <label>Modelo de Assinatura Vendedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SubscriptionModel</valueSetName>
    </valueSet>
</CustomField>