force-app/main/default/objects/Case/fields/Hefesto_Check__c.field-meta.xml
<CustomField>
    <fullName>Hefesto_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hefesto Check</label>
    <type>Checkbox</type>
</CustomField>