force-app/main/default/objects/Case/fields/HefestoContextId__c.field-meta.xml
<CustomField>
    <fullName>HefestoContextId__c</fullName>
    <label>Id contexto do Hefesto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>