force-app/main/default/objects/Case/fields/HighValue__c.field-meta.xml
<CustomField>
    <fullName>HighValue__c</fullName>
    <formula>IF( Mediation__r.isHighValue__c , &apos;True&apos;, &apos;False&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High Value</label>
    <type>Text</type>
</CustomField>