force-app/main/default/objects/Case/fields/HouseId__c.field-meta.xml
<CustomField>
    <fullName>HouseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID do imóvel que vem do objeto Entradas Listing Quality</description>
    <label>Entradas Listing Quality</label>
    <referenceTo>ListingQualityInbound__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>