force-app/main/default/objects/Case/fields/IAm__c.field-meta.xml
<CustomField>
    <fullName>IAm__c</fullName>
    <label>Eu sou</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corretor</fullName>
            </value>
            <value>
                <fullName>Representante de Imobiliária</fullName>
            </value>
            <value>
                <fullName>Colaborador Quinto Andar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>