force-app/main/default/objects/Case/fields/Identified_Fails_DD__c.field-meta.xml
<CustomField>
    <fullName>Identified_Fails_DD__c</fullName>
    <description>Field created at User Story SWSS-648</description>
    <label>Falhas Identificadas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>