force-app/main/default/objects/Case/fields/InformationCollected__c.field-meta.xml
<CustomField>
    <fullName>InformationCollected__c</fullName>
    <label>Informação coletada (IQ)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>