force-app/main/default/objects/Case/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vistoria</label>
    <referenceTo>Inspection__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>