force-app/main/default/objects/Case/fields/InspectionRecordOwnerReview__c.field-meta.xml
<CustomField>
    <fullName>InspectionRecordOwnerReview__c</fullName>
    <formula>TEXT(Mediacao__r.InspectionRecordOwnerReview__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resposta do proprietario</label>
    <type>Text</type>
</CustomField>