force-app/main/default/objects/Case/fields/InspectionRecordTenantReviewFormula__c.field-meta.xml
<CustomField>
    <fullName>InspectionRecordTenantReviewFormula__c</fullName>
    <formula>TEXT(Mediacao__r.InspectionRecordTenantReview__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resposta do Inquilino</label>
    <type>Text</type>
</CustomField>