force-app/main/default/objects/Case/fields/Inspector__c.field-meta.xml
<CustomField>
    <fullName>Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vistoriador</label>
    <referenceTo>Inspector__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>