force-app/main/default/objects/Case/fields/IQReplied__c.field-meta.xml
<CustomField>
    <fullName>IQReplied__c</fullName>
    <label>IQ Respondeu? [DELETED]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>