force-app/main/default/objects/Case/fields/IsAbove50Km__c.field-meta.xml
<CustomField>
    <fullName>IsAbove50Km__c</fullName>
    <formula>RideDistance__c &gt; 50</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acima de 50km?</label>
    <type>Checkbox</type>
</CustomField>