force-app/main/default/objects/Case/fields/IsABTest__c.field-meta.xml
<CustomField>
    <fullName>IsABTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>É teste AB</label>
    <type>Checkbox</type>
</CustomField>