force-app/main/default/objects/Case/fields/isContest__c.field-meta.xml
<CustomField>
    <fullName>isContest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contestou?</label>
    <type>Checkbox</type>
</CustomField>