force-app/main/default/objects/Case/fields/IsSpoc__c.field-meta.xml
<CustomField>
    <fullName>IsSpoc__c</fullName>
    <formula>Termination__r.IsSpoc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsSpoc</label>
    <type>Checkbox</type>
</CustomField>