force-app/main/default/objects/Case/fields/ItemToBeRemoved__c.field-meta.xml
<CustomField>
    <fullName>ItemToBeRemoved__c</fullName>
    <label>Item a ser retirado</label>
    <type>TextArea</type>
</CustomField>