force-app/main/default/objects/Case/fields/KeyDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>KeyDeliveryDate__c</fullName>
    <label>Previsão da Entrega das Chaves</label>
    <type>Date</type>
</CustomField>