force-app/main/default/objects/Case/fields/KeyLocation__c.field-meta.xml
<CustomField>
    <fullName>KeyLocation__c</fullName>
    <label>Local das Chaves</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INSPECTOR</fullName>
                <label>Vistoriador</label>
            </value>
            <value>
                <fullName>LOCK_BOX</fullName>
                <label>Lockbox</label>
            </value>
            <value>
                <fullName>EXTERNAL_RESPONSIBLE</fullName>
                <label>Responsável externo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>