force-app/main/default/objects/Case/fields/KeyOffboardingLeadTime__c.field-meta.xml
<CustomField>
    <fullName>KeyOffboardingLeadTime__c</fullName>
    <formula>DATEVALUE(DepartureInspectionDate__c) - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Offboarding Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>