force-app/main/default/objects/Case/fields/KeyProcess__c.field-meta.xml
<CustomField>
    <fullName>KeyProcess__c</fullName>
    <label>Processo de Chaves</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Offboarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>