force-app/main/default/objects/Case/fields/LandlordInformedServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>LandlordInformedServiceProvider__c</fullName>
    <label>PP informou prestador de serviço?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>