force-app/main/default/objects/Case/fields/LandlordInformedTTServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>LandlordInformedTTServiceProvider__c</fullName>
    <label>PP indicou prestador IQ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não, indicou prestador PP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>