force-app/main/default/objects/Case/fields/LandlordProviderNoHelpMilestone__c.field-meta.xml
<CustomField>
    <fullName>LandlordProviderNoHelpMilestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prestador PP não pediu ajuda começa o ma</label>
    <type>Checkbox</type>
</CustomField>