force-app/main/default/objects/Case/fields/LandlordProviderNoHelpMilestoneClosed__c.field-meta.xml
<CustomField>
    <fullName>LandlordProviderNoHelpMilestoneClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PP não pediu ajuda começa o marco Fecha</label>
    <type>Checkbox</type>
</CustomField>