force-app/main/default/objects/Case/fields/LastAgentInteraction__c.field-meta.xml
<CustomField>
    <fullName>LastAgentInteraction__c</fullName>
    <label>Última interação do agente</label>
    <type>DateTime</type>
</CustomField>