force-app/main/default/objects/Case/fields/LastCustomerInteraction__c.field-meta.xml
<CustomField>
    <fullName>LastCustomerInteraction__c</fullName>
    <label>Última interação do cliente</label>
    <type>DateTime</type>
</CustomField>