force-app/main/default/objects/Case/fields/LastEmailDirection__c.field-meta.xml
<CustomField>
    <fullName>LastEmailDirection__c</fullName>
    <label>Direção do Último Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
                <label>Recebido</label>
            </value>
            <value>
                <fullName>Outbound</fullName>
                <label>Enviado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>