force-app/main/default/objects/Case/fields/LeadershipApprovedException__c.field-meta.xml
<CustomField>
    <fullName>LeadershipApprovedException__c</fullName>
    <label>Liderança Aprovou Exceção</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>