force-app/main/default/objects/Case/fields/LeadTime__c.field-meta.xml
<CustomField>
    <fullName>LeadTime__c</fullName>
    <formula>IF(ISBLANK(ClosedDate),
0,
DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>