force-app/main/default/objects/Case/fields/Link_Legaut_DD__c.field-meta.xml
<CustomField>
    <fullName>Link_Legaut_DD__c</fullName>
    <description>Field created at User Story SWSS-648</description>
    <label>Link Legaut</label>
    <type>TextArea</type>
</CustomField>