force-app/main/default/objects/Case/fields/LLBudgetApprovalTimeLimit__c.field-meta.xml
<CustomField>
    <fullName>LLBudgetApprovalTimeLimit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tempo limite LL Realizar aprovação Orç.</label>
    <type>Checkbox</type>
</CustomField>