force-app/main/default/objects/Case/fields/LTBookkeepingDone__c.field-meta.xml
<CustomField>
    <fullName>LTBookkeepingDone__c</fullName>
    <formula>IF(
    OR(
        ISNULL(BookkeepingDoneDate__c), 
        ISNULL(PurchaseSaleContract__r.CCVSignedAt__c)
    ), 
    0, 
    ABS(
        BookkeepingDoneDate__c  - DATEVALUE(PurchaseSaleContract__r.CCVSignedAt__c)
    )
)</formula>
    <label>LT de escritura</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>