force-app/main/default/objects/Case/fields/LTCRI__c.field-meta.xml
<CustomField>
    <fullName>LTCRI__c</fullName>
    <formula>IF(
    OR(
        ISNULL(CRIDoneDate__c), 
        ISNULL(CRIPRENOTEDDate__c)
    ), 
    0, 
    ABS(
        CRIDoneDate__c - CRIPRENOTEDDate__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LT de escritura CRI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>