force-app/main/default/objects/Case/fields/MagicLinkHouseURL__c.field-meta.xml
<CustomField>
    <fullName>MagicLinkHouseURL__c</fullName>
    <description>Link do imóvel no Magiclink</description>
    <label>URL Imóvel (MagicLink)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>