force-app/main/default/objects/Case/fields/Manual_Closing__c.field-meta.xml
<CustomField>
    <fullName>Manual_Closing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para indicar que o caso foi fechado de maneira manual</description>
    <label>Fechamento Manual?</label>
    <type>Checkbox</type>
</CustomField>