force-app/main/default/objects/Case/fields/Mediacao__c.field-meta.xml
<CustomField>
    <fullName>Mediacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mediação</label>
    <referenceTo>Mediation__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>