force-app/main/default/objects/Case/fields/MediationCase__c.field-meta.xml
<CustomField>
    <fullName>MediationCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relacionamento Mediação</label>
    <referenceTo>CaseMediation__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>