force-app/main/default/objects/Case/fields/Member_real_estate_name__c.field-meta.xml
<CustomField>
    <fullName>Member_real_estate_name__c</fullName>
    <description>Nome da imobiliária para o o tipo de caso Aditivo Mão Dupla que vem do cognito</description>
    <label>Nome da Imobiliária Membro</label>
    <type>TextArea</type>
</CustomField>