force-app/main/default/objects/Case/fields/MS_TT_Close_BudgetReviewPP__c.field-meta.xml
<CustomField>
    <fullName>MS_TT_Close_BudgetReviewPP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MS_TT_Close_BudgetReviewPP</label>
    <type>Checkbox</type>
</CustomField>