force-app/main/default/objects/Case/fields/MS_TT_Date_BudgetReviewIQCreatedDateTD__c.field-meta.xml
<CustomField>
    <fullName>MS_TT_Date_BudgetReviewIQCreatedDateTD__c</fullName>
    <label>Data de Abertura do Marco Revisão IQ</label>
    <type>Date</type>
</CustomField>