force-app/main/default/objects/Case/fields/NeedRun__c.field-meta.xml
<CustomField>
    <fullName>NeedRun__c</fullName>
    <label>Precisa de corrida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>