force-app/main/default/objects/Case/fields/NetworksStages__c.field-meta.xml
<CustomField>
    <fullName>NetworksStages__c</fullName>
    <label>NetworksStages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aberto</fullName>
            </value>
            <value>
                <fullName>Em Andamento</fullName>
            </value>
            <value>
                <fullName>Aguardando Time Interno</fullName>
            </value>
            <value>
                <fullName>Aguardando Cliente</fullName>
            </value>
            <value>
                <fullName>Resolvido</fullName>
            </value>
            <value>
                <fullName>Fechado</fullName>
            </value>
            <value>
                <fullName>Pendente</fullName>
            </value>
            <value>
                <fullName>Em espera</fullName>
            </value>
            <value>
                <fullName>Reaberto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>