force-app/main/default/objects/Case/fields/NewEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>NewEffectiveDate__c</fullName>
    <label>Nova Data de vigência</label>
    <type>Date</type>
</CustomField>