force-app/main/default/objects/Case/fields/NoRideReason__c.field-meta.xml
<CustomField>
    <fullName>NoRideReason__c</fullName>
    <label>Motivo pra nao ter corrida?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente está com acesso a chave</fullName>
            </value>
            <value>
                <fullName>Chave com corretor</fullName>
            </value>
            <value>
                <fullName>Chave na portaria</fullName>
            </value>
            <value>
                <fullName>Chave na Casa Mineira</fullName>
            </value>
            <value>
                <fullName>Chave na LockBox</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>