force-app/main/default/objects/Case/fields/OmniChannelQueue__c.field-meta.xml
<CustomField>
    <fullName>OmniChannelQueue__c</fullName>
    <label>Fila OmniChannel</label>
    <length>80</length>
    <type>Text</type>
</CustomField>