force-app/main/default/objects/Case/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operation</valueSetName>
    </valueSet>
</CustomField>