force-app/main/default/objects/Case/fields/Other_sector__c.field-meta.xml
<CustomField>
    <fullName>Other_sector__c</fullName>
    <description>Campo para descrever área do Colaborador Quinto Andar que não esteja nos padrões</description>
    <label>Outra área</label>
    <length>255</length>
    <type>Text</type>
</CustomField>