force-app/main/default/objects/Case/fields/OwnerRecipientId__c.field-meta.xml
<CustomField>
    <fullName>OwnerRecipientId__c</fullName>
    <description>This field is intended to store the ID value to be sent to Survicate.</description>
    <label>Id do Proprietário Destinatário</label>
    <type>TextArea</type>
</CustomField>