force-app/main/default/objects/Case/fields/ParentCaseAnalyst__c.field-meta.xml
<CustomField>
    <fullName>ParentCaseAnalyst__c</fullName>
    <formula>Parent.Owner:User.FirstName+&apos; &apos;+Parent.Owner:User.LastName+Parent.Owner:Queue.QueueName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analista do Caso Pai</label>
    <type>Text</type>
</CustomField>