force-app/main/default/objects/Case/fields/ParentCaseOwner__c.field-meta.xml
<CustomField>
    <fullName>ParentCaseOwner__c</fullName>
    <formula>Parent.Owner:User.Email =  $User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proprietário do Caso Pai</label>
    <type>Checkbox</type>
</CustomField>